# MayaScript

./: .gitignore  .gitmodules  .pre-commit-config.yaml  pyproject.toml  readme.md  setup.cfg  test_closure.py  test_maya.py
3dsMax/: readme.md
C4D/_dir/: BaseContainer.py  BaseObject.py  Material.py  TextureTag.py
C4D/material/: get_material.py
FBXSDK/: documentInfo.py  fbx_modify.py  merge_two_scene.py
FBXSDK/_dir/: FbxCluster.py  FbxDataType.py  FbxImplementation.py  FbxLayer.py  FbxLayerElement.py  FbxManager.py  FbxMesh.py  FbxSkin.py  FbxSurfaceMaterial.py  FbxVideo.py
FBXSDK/add_data/: add_DDBaryVertices.py  bin2json.json  decode_base64.py  fbx2json.json  raw_1  raw_2  raw_py  read_bin.py
FBXSDK/property/: get_property_type.py
Houdini/: deform_to_anim_bs.py  python_rbf.py  python_rbf_retarget.py  save_svg.py
Houdini/_dir/: Geometry.py  Keyframe.py  Parm.py  Point.py  SopNode.py  Vector3.py
ImageMagick/dilate/: polySurfaceShape61.exr
ImageMagick/gradient/: test.bat
ImageMagick/trim/: run.py
MASH/: getMashPoints.py
PS/: SaveAsTga.jsx  readme.md  关闭 windows ink.reg
PS/gradient/: ActionFileFromXML.jsx  gradient.atn  gradient.bat  install.xml
Qt/: attr_qobject.py  maya_hook.py  qt_gc_bug.py  singleShot.py  treeview_expand.py
Qt/QProcess/: demo.py
Qt/QRubberBand/: demo.py
Qt/QSettings/: demo.py  demo2.py
Qt/QState/: QSignalTransition.py  inputStateTest.py  rogue.py
Qt/QTable/: demo.py  edit.py
Qt/QTree/: darg.py  darg2.py  widget.py
Qt/_QtDoc/: getQtDoc.py  overviews.md
Qt/_dir/: QAbstractItemView.py  QAbstractProxyModel.py  QDockWidget.py  QEvent.py  QGraphicsOpacityEffect.py  QGraphicsPathItem.py  QGraphicsScene.py  QGraphicsView.py  QGroupBox.py  QIcon.py  QImage.py  QKeyEvent.py  QLineEdit.py  QListWidget.py  QMainWindow.py  QMenu.py  QObject.py  QRect.py  QRunnable.py  QScrollBar.py  QSettings.py  (+14 more)
QtDemo/: colorAnimation.py
UV/: celluloidMoveUV.py
_OpenMayaDemo/: MImageWriteFile.py
_PSDemo/: ActionFileToXML.jsx  SaveAsTga.jsx  dialog.jsx  readme.md
_PyQt_dir/: QAbstractListModel.py  QAction.py  QApplication.py  QCompleter.py  QEvent.py  QFileSystemModel.py  QGraphicsItem.py  QGroupBox  QLayout.py  QListView.py  QListWidgetItem.py  QModelIndex.py  QPaintEvent.py  QPixmap.py  QPlainTextEdit.py  QPushButton.py  QQuickView.py  QRect.py  QStandardItem.py  QStyledItemDelegate.py  QTableView.py  QTextDocument.py  QTextEdit.py  QThread.py  QTreeView.py  QVBoxLayout.py  QVariantAnimation.py  QWebView.py  QWidgetAction.py  QWidgetItem.py  Signal.py  _PySide2.py  _QtWebKitWidgets.py  _QtWidgets.py  _overviews.md
_QtDemo/: layoutFrame.py  overviews.md  singleShot.py  test.py  toolBar.py
__ftrack/: add_user_previllege.py  generate_config.py
__pylish/: 10_CVEI2_practice_in_maya.py  11_CVEI3_recommand_convention.py  12_CVEI4_shift_order.py  13_data_convention.py  14_report1_2_3.py  15_report4_write_log.py  16_report5_pygal.py  17_callback1.py  18_callback2_custom.py  19_callback3.py  1_coordination_order.py  2_architecture_context_data.py  3_branching1_host.py  4_branching2_create_instance.py  5_branching3_instance_family.py  6_sharing.py  7_validating1.py  8_validating2_assert_stop.py  9_CVEI1_hardcode_order.py  readme.md
_alogrithm/: MazeGenerate.py  delaunay.py  kdtree.py  neighbour.py  rbfSolver.py  readme.md
_blender/: get_material_tree.py
_fbx/: fbx.py
_fbx_dir/: FbxAnimCurve.py  FbxAnimLayer.py  FbxNode.py  FbxScene.py
_fbxsdk/: Layers.fbx  Layers2.fbx  ShT_Tower_A.fbx  clear_first_uvset.py  documentInfo.py  fbx_read_image_path.py  fbx_read_image_path2.py  tangent_cube2.fbx
_minigame/: loop_playblast.py  transparent_material.py
_msic/: _list_files.py  cleanup.py  pool_clone.py
_official_py/: bdb.py  cmd.py  six.py
_pymel_dir/: AnimCurveTL.py  Attribute.py  Env.py  MaterialInfo.py  MeshFace.py  MeshVertexFace.py  SkinCluster.py  _nodetypes.py  boundingBox.py  camera.py  nurbsCurveCV.py  point.py
_renderdoc/: MeshFormat.py  ReplayController.py  VertexInputAttribute.py  get_mesh_data.py
_unreal_dir/: Actor.py  CompositionGraphCaptureProtocol.py  LevelSequence.py  Material.py  MaterialInstanceConstant.py  MovieSceneScriptingFloatKey.py  SkeletalMeshActor.py  SkeletalMeshComponent.py  SoftObjectPath.py  SystemLibrary.py  Texture2D.py
_vendor/: ClearMayaOutputWindow.py  MirrorSDK.py  Overlapper.mel  Overlapper.py  Overlapper2.py  _msic.md  focus.md  jlCollisionDeformer.py
anim/: animEditReplacement.py  convertMeshAnim2JntBind.py  eulerFIlterEnhance.py  panelSetup.py  similarKeyRemove.py  snapKey.py  weightDance.py  windowLockSize.py
attr/: disAttr.py  matchAttr.py  tglAttr.py
blender/: _run_script.py  _tmp.py  clear_duplicate_material.py  copy_mesh_skins.py  remove_lod.py
constraint/: breakconstraint.py  delConstraint.py  parent2point.py
curve/: CrvPt.py  crv2Fol.py
joint/: Vert2Jnt.py  jnt2Sphere.py  jntRot2Orient.py  reformRootJnt.py  skin2jnt.py
locator/: sel2loc.py
maya/: get_connected_material.py  maya_render_sequence.py  maya_show_mixin.py  maya_tool_box.py  print_widget_tree.py  test_api_performance.py  tree.txt
minigame/: retrieve_gen_skeleton.py  retrive_gen_skeleton.py  walk_import_export_fbx.py
minigame_maya/: clear_nonshaded.py  find_dulpiclate_model.py  repalce_material.py
misc/: compile.py  getCenter.py  hierarchy2json.py  inverseGrp.py  inverseGrp2.py  limitTransform.py  offsetGrp.py  progressContext.py  pyGitAutoloader.py  replaceName.py  rot2quaternation.py  selectShape.py  ungroupParent.py
mobu/: intro.py  pyside_test.py
model/: checkTopology.py  dilateUV.py  getDynaNormalData.py  getNormalData.py  getNormalVertex.py  mirror_model_vertex.py  renderdoc2vertexcolor.py  uvHandler.py
pymel_dir/: mesh_edge.py  mesh_vertex.py  transform.py
reference/: deleteNonAnimAttr.py  deleteNonAnimAttr2.py  deleteNonAnimAttr_OpenMaya.py  deleteNonAnimAttr_OpenMaya3.py  progressContext.py
rig/: HIKMatch.py  ctrl2cube.py  flimSkin2GameSkin.py  unreal2ADV.py
svn/: svn_pristine.py
unreal/: _tmp.py  dump_data.py  ls_depencies.py  msic.py  set_skeletal_lod_info.py  uclass.py
(+806 files in other folders)
