[tool.poetry]
name = "CodeBase"
version = "0.1.0"
description = ""
authors = ["timmyliang <timmyliang@tencent.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.16.0"
version_files = [
  "pyproject.toml:version",
  "src/photoshop/__version__.py",
]

[tool.black]
exclude = '''
(
  /(
      /.eggs         # exclude a few common directories in the
    | /.git          # root of the project
    | /.hg
    | /.mypy_cache
    | /.tox
    | /.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '/.pyi?$'
line-length = 88
target_version = ['py37']

[tool.isort]
add_imports = [
  "from __future__ import absolute_import",
  "from __future__ import division",
  "from __future__ import print_function",
]
atomic = true
filter_files = true
float_to_top = true
include_trailing_comma = true
known_first_party = "src"
lines_after_imports = 2
lines_between_types = 1
profile = "black"
src_paths = ["pyuiw", "tests"]
use_parentheses = true
# Enforce import section headers.
force_single_line = true
force_sort_within_sections = true
import_heading_firstparty = "Import local modules"
import_heading_future = "Import future modules"
import_heading_stdlib = "Import built-in modules"
import_heading_thirdparty = "Import third-party modules"
# All project unrelated unknown imports belong to third-party.
default_section = "THIRDPARTY"
skip_glob = "*/docs/conf.py"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = python2.7,echo
isolated_build = True
skipsdist = true

[testenv]
deps = pytest >= 3.0.0, <4
commands = pytest

[testenv:install]
deps = poetry
commands =
    poetry build
    pip uninstall -y pyuiw
    pip install dist/pyuiw-0.2.2-py3-none-any.whl
    pyuiw -w f:/repo/pyuiw/tests/ui/basic.ui

[testenv:run]
deps = -rrequirements.txt
commands = scripts/run.bat

[testenv:deploy]
deps = poetry
commands = python scripts/deploy.py
"""
